--- a/rewrite.yaml
+++ b/rewrite.yaml
@@ -1,7 +1,7 @@
 ---
 type: specs.openrewrite.org/v1beta/recipe
 name: io.moderne.UpgradeCommonsLang3
-description: Convert Foo to Bar.
+description: Upgrade commons lang 3.
 recipeList:
   - org.openrewrite.java.dependencies.UpgradeDependencyVersion:
       groupId: org.apache.commons
